src/test/ui/traits/wf-trait-object-maybe-bound.stderr
error: `?Trait` is not permitted in trait object types
  --> $DIR/wf-trait-object-maybe-bound.rs:5:15
   |
LL | type _0 = dyn ?Sized + Foo;
   |               ^^^^^^

error: `?Trait` is not permitted in trait object types
  --> $DIR/wf-trait-object-maybe-bound.rs:8:21
   |
LL | type _1 = dyn Foo + ?Sized;
   |                     ^^^^^^

error: `?Trait` is not permitted in trait object types
  --> $DIR/wf-trait-object-maybe-bound.rs:11:21
   |
LL | type _2 = dyn Foo + ?Sized + ?Sized;
   |                     ^^^^^^

error: `?Trait` is not permitted in trait object types
  --> $DIR/wf-trait-object-maybe-bound.rs:11:30
   |
LL | type _2 = dyn Foo + ?Sized + ?Sized;
   |                              ^^^^^^

error: `?Trait` is not permitted in trait object types
  --> $DIR/wf-trait-object-maybe-bound.rs:15:15
   |
LL | type _3 = dyn ?Sized + Foo;
   |               ^^^^^^

error: aborting due to 5 previous errors

